--- a/httpdocs/assets/stylesheets/styles.css
+++ b/httpdocs/assets/stylesheets/styles.css
@@ -9153,17 +9153,17 @@ canvas.round {
 }
 
 
-
 .boxhome {
+    border-color: whitesmoke;
     border-radius: 10px;
     border-style: solid;
-    border-width: 1px;
+    border-width: 3px;
     float: left;
-    height: 150px;
+    height: 140px;
     margin: 10px;
     padding: 15px;
     position: relative;
-    width: 200px;
+    width: 250px;
 }
 
 /*
