--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -40,15 +40,15 @@
 }
 
 
-
 .boxhome {
+    border-color: whitesmoke;
     border-radius: 10px;
     border-style: solid;
-    border-width: 1px;
+    border-width: 3px;
     float: left;
-    height: 150px;
+    height: 140px;
     margin: 10px;
     padding: 15px;
     position: relative;
-    width: 200px;
+    width: 250px;
 }
