--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -13,6 +13,10 @@
     display: inline !important;
 }
 
+.nav {
+    height: 30px;
+}
+
 .list-group-item
 {
     padding: 1px 10px !important;
@@ -55,5 +59,15 @@
 
 .button_classe_rischio {
     font-size: 14px;
+    width: 70px;
+}
+
+.btn-tanit{
+    background: #1072AF;
+    color: #fff;
+    border: 2px solid #1072AF;
+}
+
+.fa-width{
     width: 70px;
 }
