--- a/httpdocs/assets/stylesheets/styles.css
+++ b/httpdocs/assets/stylesheets/styles.css
@@ -9720,6 +9720,11 @@ canvas.round {
 .fa-width{
     width: 70px;
 }
+
+
+.li_width{
+    width: 150px;
+}
 /*
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
