--- a/httpdocs/assets/stylesheets/styles.css
+++ b/httpdocs/assets/stylesheets/styles.css
@@ -9683,7 +9683,7 @@ canvas.round {
 }
 
 .progress-tall {
-    height: 80px !important;
+    height: 40px !important;
 }
 
 
@@ -9724,6 +9724,92 @@ canvas.round {
 
 .li_width{
     width: 150px;
+}
+
+
+#help{
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 500px;
+    z-index: 15000;
+}
+
+.help {
+    background-color: #0F71AE;
+    padding: 20px 50px;
+    font-size: larger;
+    display: none;
+    color: white;
+}
+
+
+.row-bottom-padded-sm {
+    padding-bottom: 0px !important;
+}
+
+#fh5co-footer .fh5co-footer-widget {
+    margin-bottom: 0px !important;
+}
+
+#fh5co-footer h3 {
+    color : #fff;
+}
+
+#fh5co-footer {
+    background: #1072af;
+    color : #fff;
+}
+
+#fh5co-footer .fh5co-copyright {
+    padding-bottom: 10px !important;
+    padding-top: 10px !important;
+}
+
+#fh5co-footer a
+{
+    color: #fff !important;
+}
+
+#fh5co-footer p
+{
+    margin: 0 0 10px !important;
+}
+
+#fh5co-main-nav a
+{
+    color: #1072af !important;
+}
+
+.progress-bar {
+    color: white !important;
+}
+
+
+.green{
+background: green;
+}
+
+.orange{
+    background: orange;
+}
+
+
+
+.red{
+    color: #ff3f00;
+}
+
+.black{
+    color: black;
+}
+
+.celeste{
+    color: lightblue;
+}
+
+.yellow{
+color: yellowgreen;
 }
 /*
 To change this license header, choose License Headers in Project Properties.
@@ -14606,7 +14692,8 @@ Copyright (c) 2015 Daniel Eden
 *
 * ======================================================= */
 body {
-  font-family: "Work Sans", Arial, sans-serif;
+  /*font-family: "Work Sans", Arial, sans-serif;*/
+  font-family: Verdana, Helvetica, "Gill Sans", sans-serif;
   font-weight: 300;
   /*font-size: 16px; ORIGINALE*/
   font-size: 13px;
@@ -14892,9 +14979,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #fh5co-header {
-  padding: 30px 0;
+  border-bottom: 1px solid #7f7f7f;
   margin-bottom: 10px;
+  padding: 10px 0;
 }
+
 #fh5co-header #fh5co-logo {
   float: left;
   margin-left: -10px;
@@ -15372,10 +15461,9 @@ select[size] {
   clear: both;
   borde-top: 1px solid #ccc;
   line-height: 1.5;
-  background: lightgrey;
   padding-top: 10px;
-
 }
+
 #fh5co-footer h3 {
   font-size: 20px;
 }
