--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -54,7 +54,8 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
   color: #000;
-  font-family: "Work Sans", Arial, sans-serif;
+  /*font-family: "Work Sans", Arial, sans-serif;*/
+  font-family: Verdana, Helvetica, "Gill Sans", sans-serif;
   font-weight: 400;
   margin: 0 0 20px 0;
   padding: 0;
@@ -84,7 +85,8 @@ h1, h2, h3, h4, h5, h6 {
 .btn {
   margin-right: 4px;
   margin-bottom: 4px;
-  font-family: "Work Sans", Arial, sans-serif;
+  /*font-family: "Work Sans", Arial, sans-serif;*/
+  font-family: Verdana, Helvetica, "Gill Sans", sans-serif;
   font-size: 16px;
   font-weight: 400;
   -webkit-border-radius: 5px;
@@ -1277,3 +1279,7 @@ select[size] {
 }
 
 /*# sourceMappingURL=style.css.map */
+
+.selectpicker{
+  width: auto !important;
+}
