--- a/httpdocs/assets/stylesheets/styles.css
+++ b/httpdocs/assets/stylesheets/styles.css
@@ -9811,6 +9811,20 @@ background: green;
 .yellow{
 color: yellowgreen;
 }
+
+
+
+ /*customizzazione perche porco giuda su chrome non si vede la freccetta verso il basso*/
+ select {
+     -webkit-appearance: none !important;
+     -moz-appearance: none !important;;
+     appearance: none !important;;
+     background: url(dropdown.ico) right / 20px no-repeat #fff !important;;
+     padding-right: 20px !important;
+ }
+
+
+
 /*
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
