--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -108,8 +108,8 @@
 }
 
 #fh5co-footer {
-    background: #1072af;
-    color : #fff;
+    /*background: #1072af;*/
+    color : #1072af;
 }
 
 #fh5co-footer .fh5co-copyright {
@@ -119,7 +119,7 @@
 
 #fh5co-footer a
 {
-    color: #fff !important;
+    color: #1072af !important;
 }
 
 #fh5co-footer p
@@ -175,3 +175,38 @@ color: yellowgreen;
  }
 
 
+.payoff {
+    color: white;
+    font-family: monospace;
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 0;
+    padding-left: 50px;
+}
+
+.titolo {
+    color: white;
+    font-family: monospace;
+    font-size: 110px;
+    font-weight: 500;
+    line-height: 123px;
+    padding-left: 50px;
+}
+
+.intro {
+    background-image: url("/images/home.jpg");
+    background-position-y: -225px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    line-height: 43px;
+    margin: 0 15px 32px;
+    min-height: 270px;
+    padding-top: 171px;
+}
+
+.backgroundwhite
+{
+    background-color: white;
+    margin-top: 50px;
+    padding-top: 35px;
+}
