--- a/httpdocs/assets/stylesheets/styles.css
+++ b/httpdocs/assets/stylesheets/styles.css
@@ -9759,6 +9759,10 @@ canvas.round {
 #fh5co-footer {
     /*background: #1072af;*/
     color : #1072af;
+    margin-top: 30px;
+    padding-top: 10px;
+    border-top: 5px solid;
+
 }
 
 #fh5co-footer .fh5co-copyright {
